name:                archblob-linux-evdev
version:             0.1.0.0
synopsis:            Linux evdev bindings.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Flaviu Andrei Csernik
maintainer:          fcsernik@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  exposed-modules:   Evdev.Uapi.Internal.Types,
                     Evdev.Uapi.Internal.Device
  -- other-modules:
  other-extensions:  ForeignFunctionInterface
  build-depends:     base       >=4.6   && <4.7 ,
                     bytestring >=0.10  && <0.11,
                     unix-time  >=0.2.1 && <0.3.0

  ghc-options:       -Wall -funbox-strict-fields
  hs-source-dirs:    src,
                     src/Evdev,
                     src/Evdev/Uapi,
                     src/Evdev/Uapi/Internal
  build-tools:       hsc2hs
  default-language:  Haskell2010
