name:               archblob-linux-evdev
version:            0.1.0.0
synopsis:           Linux evdev uapi bindings.
description:        Bindings to the userspace api for the linux input subsystem.
license:            BSD3
license-file:       LICENSE
author:             Flaviu Andrei Csernik <fcsernik@gmail.com>
maintainer:         Flaviu Andrei Csernik <fcsernik@gmail.com>
copyright:          2013 Flaviu Andrei Csernik
category:           System
build-type:         Simple
cabal-version:      >=1.10

library
  default-language: Haskell2010
  exposed-modules:  Evdev.Uapi.Internal.Types,
                    Evdev.Uapi.Internal.Device

  other-extensions: ForeignFunctionInterface
  build-depends:    base       >=4.6   && <4.7   ,
                    bytestring >=0.10  && <0.11  ,
                    unix-time  >=0.2.1 && <0.3.0

  ghc-options:      -Wall -funbox-strict-fields
  hs-source-dirs:   src,
                    src/Evdev,
                    src/Evdev/Uapi,
                    src/Evdev/Uapi/Internal

  build-tools:      hsc2hs

source-repository head
  type:     git
  location: https://github.com/archblob/archblob-linux-evdev
